Tweaks for handling biomes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 target/surefire-reports/TEST-com.vividsolutions.libnoise.AppTest.xml
+/target/
+.classpath
+.project
+.settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.m2e.core.prefs
